[gd_scene load_steps=4 format=3 uid="uid://dtuwfssivvyst"]

[ext_resource type="Script" path="res://scripts/projectile.gd" id="1_5fj06"]
[ext_resource type="Texture2D" uid="uid://td02f6samxtk" path="res://resources/projectile.png" id="2_8s0mc"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_gm0ds"]

[node name="Node2D" type="Node2D" node_paths=PackedStringArray("ProjectileSprite")]
script = ExtResource("1_5fj06")
ProjectileSprite = NodePath("Sprite2D")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.7, 0.7)
texture = ExtResource("2_8s0mc")

[node name="SlowDownTimer" type="Timer" parent="."]
wait_time = 0.28
one_shot = true
autostart = true

[node name="FreeUpTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2(0.560001, 0.0399991)
shape = SubResource("CapsuleShape2D_gm0ds")

[connection signal="timeout" from="SlowDownTimer" to="." method="_on_slowdown_timeout"]
[connection signal="timeout" from="FreeUpTimer" to="." method="_on_free_up_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
